{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 79,
  "lineage": "b57c19c4-c871-e51d-5a00-19a2201dd48c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f0a057446bd3e2b",
            "arn": "arn:aws:ec2:eu-west-1:755395261411:elastic-ip/eipalloc-01f0a057446bd3e2b",
            "association_id": "eipassoc-0033e354b7cafe696",
            "domain": "vpc",
            "id": "eipalloc-01f0a057446bd3e2b",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0f41751f2fe942753",
            "private_dns": "ip-10-0-0-206.eu-west-1.compute.internal",
            "private_ip": "10.0.0.206",
            "public_dns": "ec2-34-246-232-163.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.246.232.163",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Name": "gridsynk-nat-eip"
            },
            "tags_all": {
              "Name": "gridsynk-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "eipalloc-01f0a057446bd3e2b",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:755395261411:internet-gateway/igw-0f9ff12f9985af11a",
            "id": "igw-0f9ff12f9985af11a",
            "owner_id": "755395261411",
            "region": "eu-west-1",
            "tags": {
              "Name": "gridsynk-igw"
            },
            "tags_all": {
              "Name": "gridsynk-igw"
            },
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "igw-0f9ff12f9985af11a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:loadbalancer/app/gridsynk-alb/9520d9dade2ed2a5",
            "arn_suffix": "app/gridsynk-alb/9520d9dade2ed2a5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "gridsynk-alb-555392265.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:loadbalancer/app/gridsynk-alb/9520d9dade2ed2a5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gridsynk-alb",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-05d5cd0257339ad3b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002d25c8c78777548"
              },
              {
                "subnet_id": "subnet-02b20d14171ac06c4"
              }
            ],
            "subnets": [
              "subnet-002d25c8c78777548",
              "subnet-02b20d14171ac06c4"
            ],
            "tags": {
              "Name": "gridsynk-alb"
            },
            "tags_all": {
              "Name": "gridsynk-alb"
            },
            "vpc_id": "vpc-0a8ba70bc8f40571b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:loadbalancer/app/gridsynk-alb/9520d9dade2ed2a5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:listener/app/gridsynk-alb/9520d9dade2ed2a5/545c69f314143abb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:targetgroup/gridsynk-tg/b19fca1ef7725ad7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:listener/app/gridsynk-alb/9520d9dade2ed2a5/545c69f314143abb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:loadbalancer/app/gridsynk-alb/9520d9dade2ed2a5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:listener/app/gridsynk-alb/9520d9dade2ed2a5/545c69f314143abb"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:targetgroup/gridsynk-tg/b19fca1ef7725ad7",
            "arn_suffix": "targetgroup/gridsynk-tg/b19fca1ef7725ad7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:targetgroup/gridsynk-tg/b19fca1ef7725ad7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:755395261411:loadbalancer/app/gridsynk-alb/9520d9dade2ed2a5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gridsynk-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "gridsynk-tg"
            },
            "tags_all": {
              "Name": "gridsynk-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:755395261411:targetgroup/gridsynk-tg/b19fca1ef7725ad7"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f0a057446bd3e2b",
            "association_id": "eipassoc-0033e354b7cafe696",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09bc01ca682634749",
            "network_interface_id": "eni-0f41751f2fe942753",
            "private_ip": "10.0.0.206",
            "public_ip": "34.246.232.163",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002d25c8c78777548",
            "tags": {
              "Name": "gridsynk-nat"
            },
            "tags_all": {
              "Name": "gridsynk-nat"
            },
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "nat-09bc01ca682634749",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lab",
            "aws_subnet.public",
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:755395261411:route-table/rtb-0dc05ba70bee62194",
            "id": "rtb-0dc05ba70bee62194",
            "owner_id": "755395261411",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09bc01ca682634749",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gridsynk-private-rt"
            },
            "tags_all": {
              "Name": "gridsynk-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "rtb-0dc05ba70bee62194",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lab",
            "aws_nat_gateway.lab",
            "aws_subnet.public",
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:755395261411:route-table/rtb-02fee5b5acdccaa2b",
            "id": "rtb-02fee5b5acdccaa2b",
            "owner_id": "755395261411",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9ff12f9985af11a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gridsynk-public-rt"
            },
            "tags_all": {
              "Name": "gridsynk-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "rtb-02fee5b5acdccaa2b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f8828e55b005f43",
            "region": "eu-west-1",
            "route_table_id": "rtb-0dc05ba70bee62194",
            "subnet_id": "subnet-04b375147fc93234d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "rtbassoc-05f8828e55b005f43",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lab",
            "aws_nat_gateway.lab",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0206e01b24ceb273c",
            "region": "eu-west-1",
            "route_table_id": "rtb-0dc05ba70bee62194",
            "subnet_id": "subnet-0ca2acec62b8cb880"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "rtbassoc-0206e01b24ceb273c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.lab",
            "aws_nat_gateway.lab",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b5e22214ec20d8d",
            "region": "eu-west-1",
            "route_table_id": "rtb-02fee5b5acdccaa2b",
            "subnet_id": "subnet-002d25c8c78777548"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "rtbassoc-09b5e22214ec20d8d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fefe104c38fbba9",
            "region": "eu-west-1",
            "route_table_id": "rtb-02fee5b5acdccaa2b",
            "subnet_id": "subnet-02b20d14171ac06c4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "rtbassoc-06fefe104c38fbba9",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:755395261411:security-group/sg-05d5cd0257339ad3b",
            "description": "SG for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d5cd0257339ad3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "gridsynk-alb-sg",
            "name_prefix": "",
            "owner_id": "755395261411",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gridsynk-alb-sg"
            },
            "tags_all": {
              "Name": "gridsynk-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "sg-05d5cd0257339ad3b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:755395261411:security-group/sg-047a6c65833266b73",
            "description": "SG for app instances behind ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047a6c65833266b73",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d5cd0257339ad3b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gridsynk-app-sg",
            "name_prefix": "",
            "owner_id": "755395261411",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gridsynk-app-sg"
            },
            "tags_all": {
              "Name": "gridsynk-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "sg-047a6c65833266b73",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.lab"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:755395261411:subnet/subnet-04b375147fc93234d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b375147fc93234d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755395261411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "gridsynk-private-1"
            },
            "tags_all": {
              "Name": "gridsynk-private-1"
            },
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "subnet-04b375147fc93234d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:755395261411:subnet/subnet-0ca2acec62b8cb880",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca2acec62b8cb880",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "755395261411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "gridsynk-private-2"
            },
            "tags_all": {
              "Name": "gridsynk-private-2"
            },
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "subnet-0ca2acec62b8cb880",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:755395261411:subnet/subnet-002d25c8c78777548",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002d25c8c78777548",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755395261411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "gridsynk-public-1"
            },
            "tags_all": {
              "Name": "gridsynk-public-1"
            },
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "subnet-002d25c8c78777548",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:755395261411:subnet/subnet-02b20d14171ac06c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b20d14171ac06c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755395261411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "gridsynk-public-2"
            },
            "tags_all": {
              "Name": "gridsynk-public-2"
            },
            "vpc_id": "vpc-0a8ba70bc8f40571b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "subnet-02b20d14171ac06c4",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.lab",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:755395261411:vpc/vpc-0a8ba70bc8f40571b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02cc4b97f20ad3fee",
            "default_route_table_id": "rtb-0d631bd6777893f0b",
            "default_security_group_id": "sg-0e17805194ca8ebdb",
            "dhcp_options_id": "dopt-026bd6498de985257",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8ba70bc8f40571b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d631bd6777893f0b",
            "owner_id": "755395261411",
            "region": "eu-west-1",
            "tags": {
              "Name": "gridsynk-vpc"
            },
            "tags_all": {
              "Name": "gridsynk-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "755395261411",
            "id": "vpc-0a8ba70bc8f40571b",
            "region": "eu-west-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}